--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,4 +1,3 @@
-cat > templates/profile/index.html.twig <<'TWIG'
 {% extends 'base.html.twig' %}
 
 {% block title %}Mon profil{% endblock %}
@@ -6,13 +5,10 @@ cat > templates/profile/index.html.twig <<'TWIG'
 {% block body %}
     <h1>Mon profil</h1>
 
-    <p>
-        <strong>Email :</strong>
-        {{ user.email }}
-    </p>
-
-    <p>
-        <a href="{{ path('app_logout') }}">Se déconnecter</a>
-    </p>
+    {% if user %}
+        <p>Email : {{ user.email }}</p>
+        <p>Rôles : {{ user.roles|join(', ') }}</p>
+    {% else %}
+        <p>Pas connecté.</p>
+    {% endif %}
 {% endblock %}
-TWIG
